Added more component architecture to flesh out for later.

--- a/theme/_material-theme.scss
+++ b/theme/_material-theme.scss
@@ -1,2 +1,3 @@
-$primary-color: #1ecbe1;
-$secondary-color: #e1341e;
+$primary-color: #2295DD;
+$secondary-color: #dd2295;
+$tertiary-color: #95DD22;
