--- a/public/global.css
+++ b/public/global.css
@@ -1,5 +1,6 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
+html,
+body {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
