--- a/theme/_material-theme.scss
+++ b/theme/_material-theme.scss
@@ -1,3 +1,3 @@
-$primary-color: #2295DD;
+$primary-color: #2295dd;
 $secondary-color: #dd2295;
-$tertiary-color: #95DD22;
+$tertiary-color: #95dd22;
